# rusty-awa

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
benches/: examples.nu
crates/awa-abyss/: Cargo.toml
crates/awa-abyss/src/: arena.rs  buffered.rs  lib.rs  linked.rs
crates/awa-asm/: Cargo.toml
crates/awa-asm/src/: lib.rs  macros.rs  parser.rs
crates/awa-core/: Cargo.toml
crates/awa-core/src/: _u5.rs  abyss.rs  awascii.rs  awatalk.rs  awatism.rs  lib.rs  program.rs
crates/awa-core/src/asm/: awascii.asm  awatism.asm  bank.asm  macro.asm  mod.rs
crates/awa-debug/: Cargo.toml
crates/awa-debug/src/: lib.rs  pipe.rs
crates/awa-debug/src/widgets/: abyss.rs  io.rs  mod.rs  program.rs
crates/awa-interpreter/: Cargo.toml
crates/awa-interpreter/src/: iter.rs  lib.rs
examples/: fibs.awasm  fibs.tism  prime.awa
src/: lib.rs  main.rs
