[workspace]
resolver = "2"
members = [
  "crates/*",
]

[workspace.package]
authors = ["Shirotha"]
repository = "https://github.com/Shirotha/rusty_awa"
edition = "2021"

[workspace.dependencies]
thiserror = "1.0.61"
bitbuffer = "0.11.0"
num-traits = "0.2.19"



[package]
name = "rusty-awa"
description = "A Very Special Programming Language For Very Special People"
repository.workspace = true
authors.workspace = true
edition.workspace = true
version = "0.1.0"

[[bin]]
name = "awa"
path = "src/main.rs"

[dependencies]
awa-core = { path = "crates/awa-core" }
awa-abyss = { path = "crates/awa-abyss" }
awa-interpreter = { path = "crates/awa-interpreter" }
awa-debug = { path = "crates/awa-debug" }

thiserror.workspace = true
clap = { version = "4.5.9", features = ["default", "derive"] }



[profile.release]
opt-level = 3
incremental = false
codegen-units = 1
lto = "fat"
debug = false
panic = "abort"
strip = "debuginfo"

[profile.release.package."*"]
opt-level = 3


[profile.dev]
opt-level = 0
incremental = true
codegen-units = 256
lto = false
debug = 1

[profile.dev.package."*"]
opt-level = 3


[profile.bench]
incremental = true
codegen-units = 256


[profile.debugger]
inherits = "dev"
debug = 2
