[package]
name = "awa-abyss"
repository.workspace = true
authors.workspace = true
edition.workspace = true
version = "0.1.0"

[features]
default = ["default_linked"]
# store count in double bubbles when using linked lists
cache_count = []
# import ::linked into the root namespace
default_linked = []

[dependencies]
awa-core = { path = "../awa-core" }

num-traits.workspace = true