[package]
name = "awa-debug"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
awa-core = { path = "../awa-core" }
awa-interpreter = { path = "../awa-interpreter" }

thiserror.workspace = true
parking_lot.workspace = true
ratatui = { version = "0.27.0", features = ["unstable-widget-ref"] }
tui-input = "0.9.0"
